k8s/py-block2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-block2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-block2
  template:
    metadata:
      labels:
        app: py-block2
    spec:
      containers:
      - name: py-block2-container
        image: git-block1-py-block2
        imagePullPolicy: Never
