k8s/py-block2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: py-block2-k8s
spec:
  containers:
    - name: py-block2-container
      image: git-block1-py-block2
