k8s/py-block3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-block3-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-block3
  template:
    metadata:
      labels:
        app: py-block3
    spec:
       containers:
       - name: py-block3-container
         image: git-block1-py-block3
         imagePullPolicy: Never
         ports:
         - containerPort: 5000
         readinessProbe:
           httpGet:
             path: /health
             port: 5000
           initialDelaySeconds: 5
           periodSeconds: 5
           timeoutSeconds: 1
           failureThreshold: 2
           successThreshold: 1
         livenessProbe:
           httpGet:
             path: /health
             port: 5000
           initialDelaySeconds: 5
           periodSeconds: 5
           timeoutSeconds: 3
           failureThreshold: 3
           successThreshold: 1
