k8s/py-block3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-block3-service

spec:
  selector:
    app: py-block3
  ports:
    - port: 5000
      targetPort: 5000
